# yoloimage_claudecodetest

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
src/: main.py
src/streetwatch/: __init__.py  annotator.py  cli.py  detector.py  reporter.py
tests/: conftest.py  test_annotator.py  test_cli.py  test_detector.py  test_reporter.py
